--- a/RentaCar/RentaCar/Views/Shared/_CartaVehiculo.cshtml
+++ b/RentaCar/RentaCar/Views/Shared/_CartaVehiculo.cshtml
@@ -2,7 +2,7 @@
     <a href="images/img_1.jpg" class="fh5co-card-item image-popup">
         <figure>
             <div class="overlay"><i class="ti-plus"></i></div>
-            <img src="images/img_1.jpg" alt="Image" class="img-responsive">
+            @*<img src="images/img_1.jpg" alt="Image" class="img-responsive">*@
         </figure>
         <div class="fh5co-text">
             <h2>Fresh Mushrooms</h2>
