--- a/RentaCar/RentaCar/Views/Home/Buscar.cshtml
+++ b/RentaCar/RentaCar/Views/Home/Buscar.cshtml
@@ -5,7 +5,9 @@
 }
 <br />
 <div class="gtco-container">
-    <h2 class="primary-color">Vehículos</h2>
+  
+
+    <h2 class="primary-color text-center">Vehículos</h2>
     @Html.Partial("_Buscador")
     <div class="col-md-9">
         <div class="row">
@@ -13,7 +15,7 @@
             {
                 <div class="col-lg-12 col-md-12 col-sm-6">
                     <div class="fh5co-card-item">
-                        <figure>
+                        <figure style="align-items:center;">
                             <img src="@item.url_foto"  alt="Image" class="img-responsive" />
                         </figure>
                         <br />
@@ -23,11 +25,11 @@
                                 <tr>
                                     @if (item.aire_acondicionado)
                                     {
-                                    <td><i class="fa fa-snowflake-o" style="color:blue;" aria-hidden="true"></i> A/C</td>
+                                    <td><i class="fa fa-snowflake-o" style="color:blue;" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="Aire Acondicionado"></i> A/C</td>
                                     }
-                                    <td><i class="fa fa-user" style="color:green;" aria-hidden="true"></i> @item.capacidad</td>
-                                    <td><i class="fa fa-microchip" aria-hidden="true"></i> @item.transmision</td>
-                                    <td><i class="fa fa-asterisk" aria-hidden="true"></i> @item.puertas Puertas</td>
+                                    <td><i class="fa fa-user" style="color:green;" aria-hidden="true"  data-toggle="tooltip" data-placement="top" title="Capacidad"></i> @item.capacidad Pasajeros</td>
+                                    <td><i class="fa fa-microchip" aria-hidden="true"  data-toggle="tooltip" data-placement="top" title="Transmision"></i> @item.transmision</td>
+                                    <td><img src="~/Imagenes/puerta.png" style="width:15px; height:15px;"  data-toggle="tooltip" data-placement="top" title="Puertas" /> @item.puertas</td>
                                 </tr>
                             </table>
                           
