--- a/RentaCar/RentaCar/Views/Shared/_Layout.cshtml
+++ b/RentaCar/RentaCar/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
     <!-- Theme style  -->
     <link rel="stylesheet" href="~/css/style.css">
     <!-- Modernizr JS -->
-    <script src="js/modernizr-2.6.2.min.js"></script>
+    <script src="~/js/modernizr-2.6.2.min.js"></script>
     <!-- FOR IE9 below -->
     <!--[if lt IE 9]>
     <script src="~/js/respond.min.js"></script>
@@ -97,7 +97,7 @@
     <script src="~/js/magnific-popup-options.js"></script>
 
     <script src="~/js/moment.min.js"></script>
-    <script src="~/js/moment-with-locales.js"></script>
+    @*<script src="~/js/moment-with-locales.js"></script>*@
 
     <script src="~/js/bootstrap-datetimepicker.min.js"></script>
     <!-- alert -->
