--- a/RentaCar/RentaCar/css/style.css
+++ b/RentaCar/RentaCar/css/style.css
@@ -57,7 +57,6 @@ p {
 }
 
 h1, h2, h3, h4, h5, h6, figure {
-  color: #000;
   font-family: "Lato", Arial, sans-serif;
   font-weight: 400;
   margin: 0 0 20px 0;
@@ -1543,7 +1542,7 @@ form label {
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background: url(../images/loader.gif) center no-repeat #fff;
+  background: url(../Imagenes/loader.gif) center no-repeat #fff;
 }
 
 .js .animate-box {
