--- a/RentaCar/RentaCar/Views/Compra/Index.cshtml
+++ b/RentaCar/RentaCar/Views/Compra/Index.cshtml
@@ -25,15 +25,18 @@
                                     <label for="date-start" class="text-uppercase">Desde </label>
                                     <input type="text" class="form-control" value="@Model.buscador.Fechadesde" readonly>
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-md-2">
                                     <label for="date-start" class="text-uppercase">Hora </label>
                                     <input type="text" class="form-control" value="@Model.buscador.Timedesde" readonly>
+                                </div>
+                                <div class="col-md-2" style="padding-top:38px;">
+                                    <span class="glyphicon glyphicon-arrow-right fa-lg"></span>
                                 </div>
                                 <div class="col-md-3">
                                     <label for="date-start" class="text-uppercase">Hasta </label>
                                     <input type="text"class="form-control" value="@Model.buscador.Fechahasta" readonly>
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-md-2">
                                     <label for="date-start" class="text-uppercase">Hora </label>
                                     <input type="text" class="form-control" value="@Model.buscador.Timehasta" readonly>
                                 </div>
@@ -74,7 +77,11 @@
             <h1>Seguros<small> e información</small></h1>
         </div>
         <div class="row">
-
+            <div class="jumbotron">
+                <h1>Hello, world!</h1>
+                <p>...</p>
+                <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+            </div>
         </div>
     </div>
 
