--- a/RentaCar/RentaCar/Views/Shared/_CartaVehiculo.cshtml
+++ b/RentaCar/RentaCar/Views/Shared/_CartaVehiculo.cshtml
@@ -1,14 +1,18 @@
-﻿<div class="col-lg-4 col-md-4 col-sm-6">
-    <a href="images/img_1.jpg" class="fh5co-card-item image-popup">
-        <figure>
-            <div class="overlay"><i class="ti-plus"></i></div>
-            @*<img src="images/img_1.jpg" alt="Image" class="img-responsive">*@
-        </figure>
-        <div class="fh5co-text">
-            <h2>Fresh Mushrooms</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-            <p><span>Valor Diario:</span></p>
-            <p><span class="price cursive-font">$19.15</span></p>
-        </div>
-    </a>
-</div>
+﻿@model IEnumerable<RentaCar.Datos.Vehiculo>
+@foreach (var item in Model.Take(3))
+{
+    <div class="col-lg-4 col-md-4 col-sm-6">
+        <a href="#" class="fh5co-card-item image-popup">
+            <figure>
+                <div class="overlay"><i class="ti-plus"></i></div>
+                <img src="@item.url_foto" alt="Image" class="img-responsive">
+            </figure>
+            <div class="fh5co-text">
+                <h2>@item.modelo</h2>
+                <p>@item.Categoria.nombre</p>
+                <p><span>Valor Diario:</span></p>
+                <p><span class="price cursive-font">@string.Format("{0} {1:N0}","$",item.valor)</span></p>
+            </div>
+        </a>
+    </div>
+}
