--- a/RentaCar/RentaCar/Views/Shared/_Layout.cshtml
+++ b/RentaCar/RentaCar/Views/Shared/_Layout.cshtml
@@ -28,6 +28,8 @@
 
     <link href="~/js/sweet-alert/sweetalert.css" rel="stylesheet" />
 
+    @RenderSection("estilo", required: false)
+
     <link href="~/css/font-awesome.css" rel="stylesheet" />
     <!-- Theme style  -->
     <link rel="stylesheet" href="~/css/style.css">
@@ -52,7 +54,7 @@
                     </div>
                     <div class="col-xs-8 text-right menu-1">
                         <ul>
-                            <li><a href="menu.html">Menu</a></li>
+                            <li><a href="@Url.Action("Index","Home")">Inicio</a></li>
                             <li class="has-dropdown">
                                 <a href="services.html">Vehiculos</a>
                                 <ul class="dropdown">
